Revision history for String::Tools.

{{$NEXT}}

 - Change `define` to a defined value by using the constant `!!undef`
   (Which causes it work in both the string and numeric contexts correctly).
 - Added/improved several tests.
 - Added the `trim_lines()` function.

0.14.163  2014-06-12

 - Updated to use several Dist::Zilla features and plugins.
 - Improved documentation.
